--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script>
-        const TAVILY_API_KEY = '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';
-        const GROQ_API_KEY = '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';
+        const TAVILY_API_KEY = '';
+        const GROQ_API_KEY = '';
         
         async function searchTravelInfo() {
             const inputPlace = document.getElementById('inputPlace').value;
